[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/icons/back.png" type="Texture" id=5]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SafeArea" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="SafeArea"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="SafeArea/VBoxContainer"]
margin_right = 600.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="SafeArea/VBoxContainer"]
margin_top = 14.0
margin_right = 600.0
margin_bottom = 120.0

[node name="MarginContainer" type="MarginContainer" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 106.0
rect_min_size = Vector2( 10, 0 )

[node name="back" type="Button" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 134.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 80 )
custom_fonts/font = ExtResource( 3 )
icon = ExtResource( 5 )
flat = true

[node name="Label" type="Label" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_top = 23.0
margin_right = 385.0
margin_bottom = 83.0
size_flags_horizontal = 6
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Lobby"

[node name="MarginContainer3" type="MarginContainer" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 600.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 0 )

[node name="CenterContainer" type="CenterContainer" parent="SafeArea/VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3

[node name="play" type="Button" parent="SafeArea/VBoxContainer/CenterContainer"]
margin_left = 250.0
margin_top = 410.0
margin_right = 350.0
margin_bottom = 490.0
rect_min_size = Vector2( 100, 80 )
text = "Play"

[connection signal="pressed" from="SafeArea/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SafeArea/VBoxContainer/CenterContainer/play" to="." method="_on_play_pressed"]
